Working Gestures as well

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <h3>Finger data:</h3>
   <div id="pointableData"></div>
   <div style="clear:both;"></div>
+  <h3>Gesture data:</h3>
+  <div id="gestureData"></div>
 </div>
 </body>
 
