--- a/index.html
+++ b/index.html
@@ -1,24 +1,57 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="http://js.leapmotion.com/0.2.2/leap.min.js"></script>
+  <script src="js/grid.js" type="text/javascript"></script>
+  <style>
+  .highlight {
+    border: 5px red solid !important;
+  }
+
+  #slide {
+    background-color:white;
+    float: left;
+    width: 100%;
+    height: 100%;
+  }
+
+  .grid div {
+    width: 100px;
+    height: 100px;
+    float: left;
+    border: 5px black solid;
+  }
+
+  </style>
 </head>
 <body>
-<h1>Leap Motion JavaScript Sample</h1>
-<div id="main">
-  <button id="pause" onclick="togglePause()">Pause</button>
-  <h3>Frame data:</h3>
-  <div id="frameData"></div>
-  <div style="clear:both;"></div>
-  <h3>Hand data:</h3>
-  <div id="handData"></div>
-  <div style="clear:both;"></div>
-  <h3>Finger data:</h3>
-  <div id="pointableData"></div>
-  <div style="clear:both;"></div>
-</div>
+  <div class="grid">
+    <div id="d0_0"></div>
+    <div id="d1_0"></div>
+    <div id="d2_0"></div>
+    <div id="d3_0"></div>
+    <div id="d4_0"></div><br clear=both>
+    <div id="d0_1"></div>
+    <div id="d1_1"></div>
+    <div id="d2_1"></div>
+    <div id="d3_1"></div>
+    <div id="d4_1"></div><br clear=both>
+    <div id="d0_2"></div>
+    <div id="d1_2"></div>
+    <div id="d2_2"></div>
+    <div id="d3_2"></div>
+    <div id="d4_2"></div><br clear=both>
+    <div id="d0_3"></div>
+    <div id="d1_3"></div>
+    <div id="d2_3"></div>
+    <div id="d3_3"></div>
+    <div id="d4_3"></div><br clear=both>
+    <div id="d0_4"></div>
+    <div id="d1_4"></div>
+    <div id="d2_4"></div>
+    <div id="d3_4"></div>
+    <div id="d4_4"></div><br clear=both>
+  </div>
 </body>
-
-<script src="http://js.leapmotion.com/leap-0.6.3.js"></script>
-<script src="js/main.js" type="text/javascript"></script>
 </html>
