--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="http://js.leapmotion.com/0.2.2/leap.min.js"></script>
   <script src="js/grid.js" type="text/javascript"></script>
-  <style>
-  .highlight {
-    border: 5px red solid !important;
-  }
-
-  #slide {
-    background-color:white;
-    float: left;
-    width: 100%;
-    height: 100%;
-  }
-
-  .grid div {
-    width: 100px;
-    height: 100px;
-    float: left;
-    border: 5px black solid;
-  }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body onload="init()">
   <div class="grid">
