--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="http://js.leapmotion.com/0.2.2/leap.min.js"></script>
   <script src="js/grid.js" type="text/javascript"></script>
+  <script src="js/wordSearch.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body onload="init()">
