--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div id="d2_4"></div>
     <div id="d3_4"></div>
     <div id="d4_4"></div><br clear=both>
+    <p id="insert"></p>
   </div>
 </body>
 </html>
